syntax = "proto3";

package proto;

message TypesMessage {
	uint32 Uint32  = 1;
	uint64 Uint64  = 2;
	int32 Int32    = 3;
	int64 Int64    = 4;
	float Float32  = 5;
	double Float64 = 6;
	bool Bool      = 7;
	string String  = 8;
	bytes Bytes    = 9;
}

message SliceMessage {
	repeated uint32 Uint32  = 1;
	repeated uint64 Uint64  = 2;
	repeated int32 Int32    = 3;
	repeated int64 Int64    = 4;
	repeated float Float32  = 5;
	repeated double Float64 = 6;
	repeated bool Bool      = 7;
	repeated string String  = 8;
	repeated bytes Bytes    = 9;
}

message StructMessage {
	TypesMessage types  = 1;
	SliceMessage slices = 2;
}

